feat: add routing und ip hacks

--- a/src/teachings/iso-osi-uwu.mdx
+++ b/src/teachings/iso-osi-uwu.mdx
@@ -103,13 +103,20 @@ Selbst in den anderen Aufgaben ist es praktisch formal zu sein.
 
 x> Erleutern sie knapp die Begriffe Dienst, Protkoll, Dienstprimitiv, Instanz, Dienstzugangspunkt, etc.
 
+<Spoiler>
 Sieh oben :D 
+</Spoiler>
 
 x> Erklären sie die Unterschiede zwischen dem ISO-OSI-Modell und dem TCP/IP-Modell
 
+<Spoiler>
 naja auch siehe oben. TCP fasst ein paar Schichten zusammen, da Protokolle wie Ethernet ebenfalls mehrere Schichten abdecken.
+</Spoiler>
+
 
 x> Erklären sie den Unterschied zwischen horizontaler und vertikaler Kommunikation
+
+<Spoiler>
 
 Horizontal ist die Kommunikation zwischen zwei Instanzen einer Schicht. Vertikal ist die Kommunikation zwischen zwei Instanzen von verschiedenen Schichten.
 
@@ -119,5 +126,9 @@ Die Kommunikation geht dann aber eigentlich einmal komplett durch die Schichten
 [HTTP] $\to$ [TCP] $\to$ [IP] $\to$ [WIFI] $\to \dots \to$ [Ethernet] $\to$ [IP] $\to$ [TCP] $\to$ [HTTP]
 
 Das ist dann vertikal.
+
+</Spoiler>
+
+
 
 <ISOOSI></ISOOSI>
