--- a/src/teachings/machester-werwillnachmanchaster.mdx
+++ b/src/teachings/machester-werwillnachmanchaster.mdx
@@ -93,30 +93,44 @@ Damit man z.B. nicht immer nur Hügel misst und immer das Tal verpasst.
 
 x> Zeichne die Codierung von 10101010 mit NRZ, Manchester und Biphase
 
+<Spoiler>
 Naja wenn man das geübt hat, geht das wie alles andere auch. Wendet einfach immer wieder das Schema an und verwecheslt die einzelnen Subklassen nicht.
+</Spoiler>
 
 x> Decodiere die Codierung von dem NRZ code (BILD)...
 
+<Spoiler>
 Naja easy.
+</Spoiler>
 
 x> Es ist eine Schrittgeschwidigkeit von $1000$ baud gegeben. Berechne die Übertragungsgeschwindigkeit für NRZ, Manchester und Biphase
 
+<Spoiler>
 Wie oben $1000$ baud mit NRZ ist $1000$ Bit/s, mit Manchester $500$ Bit/s und mit Biphase $500$ Bit/s.
+</Spoiler>
 
 x> Gegeben ein Signalbild, welche Modulation wurde verwendet?
 
+<Spoiler>
 Dann muss man auf unterschiedliche Frequenzen, Amplituden und Phasen achten. Gegebenenfalls mehreres.
+</Spoiler>
 
 x> Decodiere oder codiere mit einer 16QAM Modulation
 
+<Spoiler>
 Dann bekommt man diese Zielscheibe und muss dann was ablesen oder so.
+</Spoiler>
 
 x> Zusammen mit Nyquist und Shannon, ist eine 256QAM einsetztbar
 
+<Spoiler>
 !> $C = 2 \cdot B \cdot \log_2(n)$ mit $n = $ Anzahl der möglichen Zustände und $B = $ Bandbreite
 
 Somit muss man die theoretische maximale Daterate mit Shannon berechnen und dann Nyquist für 256Zustände berechnen, falls es $\ge$ ist, dann ist es einsetzbar.
+</Spoiler>
 
 x> Welche Datenrate wird benötigt bei einer Abtastung von $20Hz-20kHz$ möglich bei $16Bit$ quantisierung?
 
+<Spoiler>
 Wegen Abtasttheorem $40Khz$ und dann $16Bit$ quantisierung, also $40000 \cdot 16 = 640000$ Bit/s
+</Spoiler>
