--- a/src/teachings/Vermittlung-vermittlungdeiner5.0.mdx
+++ b/src/teachings/Vermittlung-vermittlungdeiner5.0.mdx
@@ -56,6 +56,18 @@ Also gehen wir mal den Header durch
 
 - Options: Zusatzinfos.
 
+### Fragmentierung
+
+> Ich würde schätzen es kommt irgendeine Aufgabe über IP-Fragmentierung dran also hier nochmal detailierter.
+
+Ein Paket (1) mit 1976 Bytes wird aufgeteilt in 2 Pakete mit 1480 (2), 496 (3) Bytes. die Total Length von (1) ist 1996, ID = 42. MF-Flag = 0. Offset = 0.
+
+So nun hat Paket 2 das MF-Flag = 1 und Offset = 0 aber auch die ID=42 und eine Total Length von 1500. 
+
+Paket 3 hat das MF-Flag = 0 und Offset = 185 (*8 = 1480 implizit) und auch die ID=42 und eine TotalLength von 516.
+
+Ein Router der 2 erhält merkt das noch was fehlt, durch das MF-Flag und merkt sich die id. Wenn er dann 3 erhält, merkt er das es das letzte Paket ist und rekonstruiert das Paket 1 dank des Offsets.
+
 ## IPv6
 
 Das objektiv bessere Protokoll. Es hat mehr Adressen, ist besser, schneller, stärker. Es wurde viel weggelassen, da die Adressen auf 128-Bit erweitert wurden. Aber in IPv4 war auch viel Schwachsinn.
@@ -89,3 +101,128 @@ Dann überprüft ARP als erstes einen Cache, ob an schon die MAC-Adresse kennt, 
 Die Antwort kommt dann entweder von nem anderen Router oder vom Gerät selber. 
 
 Nun hat man die MAC-Adresse
+
+## Hacks
+IPv4 war nicht auf die immense Menge von 8k Katzenvideos vorbereitet, deswegen wurde bis zur IPv6 eingesetzt wird umwege gesucht, um ein Hauptproblem zu umgehen:
+**Adressknapheit**
+
+Früher gab es sogenannte Adressklassen (Namentlich A, B, C, D, E) die Adressen unterteilt haben, eine A Klasse hat zum Beispiel die Adressen $123.xxx.xxx.xxx$ bekommen.
+Da wurde aber schon schnell klar, das es so viel zu viele Adressen gibt, die nicht genutzt werden, weil die Unterteilung einfach zu steif war.
+
+Deswegen => Subnetzmasken, der Schmerz der IT.
+
+### Subnetzmasken
+
+Eine Subnetzmaske ist eine 32-Bit Zahl, die eine Adresse in einen Host-Teil und einen Netzwerk-Teil unterteilt, man bekommt ihn indem die Subnetzmaske mit der Adresse verundet. Hier für ein Beispiel
+
+> 137.243.21.1/22 => 137.243.20.0 Netzwerk-Teil und 0.0.1.1 Host-Teil
+
+//TODO genaue Aufteilung
+
+### NAT
+Network Adress Translation ist ein Verfahren, um praktisch nur eine global Adresse für ein gesamtes lokales Netzwerk zu verwenden. Dafür gibt es einen NAT-Router, 
+der sich mit einer Abbbildungstabelle speichert welche IP-Adresse mit welchem Port kommuniziert. Ein Beispiel einer solchen Tabelle:
+
+| Protocol | lokaler Socket    | globaler Socket     | Ziel Socket    |
+|----------| ----------------- | ------------------- | -------------- |
+| TCP      | 192.168.0.4:53211 | 137.226.12.32:53211 | 134.130.5.1:80 |
+| TCP      | 192.168.0.5:45201 | 137.226.12.32:45201 | 134.130.5.1:80 |
+
+Wenn nun also ein Paket von 134.130.5.1 an die 137.226.12.32 gesendet wird, wird vom NAT-Router der Port überprüft an den lokalen Socket gesendet.
+
+Das wars auch schon. So muss die Telekom für deine scheiß Studenten"wohnung" nur eine IP-Adresse haben und nicht 1000.
+
+### DHCP
+
+DHCP sorgt dafür, dass dich dein PC nicht immer wenn du in einem neuen Netzwerk bist, nach der IP-Adresse fragen muss die er haben soll. 
+Der DHCP-Server (meist auch der Router) verteilt die IP-Adressen.
+
+> DHCP-Request als Broadcast: Hey ich brauch ne IP-Adresse meine MAC ist xx:xx:xx:xx:xx:xx 
+
+> DHCP-Response an das Gerät: Wer 
+
+> DHCP-Request als Broadcast: Ich bin das Gerät mit der MAC xx:xx:xx:xx:xx:xx
+
+> DHCP-Response an das Gerät: Wer hat gefragt. Ne Hier hast du deine IP-Adresse xxx.xxx.xxx.xxx mit dem Default Gateway xxx.xxx.xxx.xxx und der Subnetzmaske xxx.xxx.xxx.xxx und jetzt halts maul.
+
+Ja oke ohne die zwei in der mitte aber so gehts.
+
+### ICMP
+
+Für Fehlermeldungen und so. z.B. wenn ein Paket nicht ankommt, wird ein ICMP-Paket zurückgeschickt. Aber nicht immer ist ja auch viel Arbeit.
+
+## Routing
+
+?> Routing ist scheiße
+
+Auch hier gibt es wieder verschiedene Ansätze aber für effizienz Messungen müssen erstmal Metriken entworfen werden.
+Eine ist die Hop-Count, aber auch Sachen wie Verzögerung und Netzdurchsatz sind wichtig.
+
+- Das einfachste zuerst: **Static Routing**
+Es gibt eine Routing-Tabelle jeder Zielknoten hat eine Zeile. In dieser Zeile gibt es mehrere Wahlen mit einer relativen Gewichtung der Wahl. Dann wähle zufällig mit den Gewichtungswahrscheinlichkeiten.
+
+- **Backward Learning**
+Jeder Router trift seine eigene Entscheidung isoliert. Es funktioniert also ähnlich zu einem Switch. Routing während des lernens ungünstig und Ausfälle sind nicht bedacht und werden nicht weitergemeldet.
+
+- **Distance Vector**
+
+Jeder Router sendet seine Abstandswerte an alle (lokal) anderen Router. 
+Die anderen Router fügen die Routing-Tabelle des anderen hinzu und wählen die beste Route. 
+
+Das Vector kommt von der Notation dahinter, in der Routing Tabelle stehen (Ziel, Next Hop, Kosten), eine Übertragung der Abstände wird als Vector bezeichnet ((A,4), (B,2), (C,0), (D,3), ...).
+
+Dat Problem bei dem ganzen shit ist der Bouncing Effect. Wenn B mit 1 direkt zu A kann und C mit 2 zu A über B und mit 5 direkt zu A kann, aber dann die Verbindung A-B ausfällt,
+sendet C seinen Traffic an B mit Kosten 1, B sendet ihn zurück, da es der beste/einzige Weg ist mit Kosten 2, C denkt aber weiterhin B währe der beste Weg und sendet ihn wieder zurück, B währe der beste Weg und so weiter. Bis Kosten 5 wo C es dann auch irgendwann mal checkt.
+
+Falls man gar nicht nach A kommt gibt es ein Count-To-Infinity.
+
+- **Link State**
+
+Link state verteilt das Wissen über die Verbindungen und die Kosten. Jeder Router sendet seine Nachbarkosten per Flooding ins Netz mit Altersangaben und Sequenznummer für Duplikate.
+
+Nun nutzt man Dijkstra um den kürzesten Weg zu finden.
+
+Um das komplete Flooding zu verhindern, werden Duplikate mit Sequenznummern und Altersangaben verworfen.
+
+?> Ich glaube Dijkstra guckt ihr euch kurz eine Animation an.
+
+![Dijkstra Animation](https://upload.wikimedia.org/wikipedia/commons/5/57/Dijkstra_Animation.gif?20171021180030)
+
+Uff das war anstrengend aber fürs üben sind Aufgaben wichtig:
+
+## Aufgaben
+
+x> Du bekommst ein Netzwerk mit Subnetzen und Routern. Du musst die IP-Adressen und die Routing-Tabelle ausrechnen.
+
+<Spoiler>
+Keine Lust darauf guckt euch die Klausur vom 8.7.2015 A5 an.  
+</Spoiler>
+
+x> Du bekommst eine Network-Adresse wie 137.222.25.0/22 und musst sie in 6 Subnetze aufteilen. mit Subnetz 1 und 2 doppelt so groß wie die anderen
+
+<Spoiler>
+137.222.25.0/24
+137.222.26.0/24
+137.222.26.0/25
+137.222.27.128/25
+137.222.28.0/25
+137.222.28.128/25
+</Spoiler>
+
+x> Erkläre die Unterschiede zwischen IPv4 und IPv6
+
+<Spoiler>
+Ganz ehrlich sieh oben nach.
+</Spoiler>
+
+x> Erkläre was das Problem bei Distance Vector Routing ist
+
+<Spoiler>
+Bouncing Effect und Count-To-Infinity. Details $\uparrow$
+</Spoiler>
+
+x> Führe mit einer gegebenen Tabelle Dijkstra aus
+
+<Spoiler>
+Muss man halt üben xd
+</Spoiler>
