--- a/src/teachings/Ethernet.mdx
+++ b/src/teachings/Ethernet.mdx
@@ -17,14 +17,14 @@ WLAN KABEL
 
 Ethernet ist nicht umbedingt ein Standard, es wurde oft erweitert (für z.B. 100MBit/s etc) somit unterscheiden sich die Codierungen mehr dazu [hier](/teachings/machester-werwillnachmanchaster)
 Die Verteilung sieht so aus:
-- < 100MBit/s: [Manchaster](/teachings/machester-werwillnachmanchaster##Manchaster)
+- < 100MBit/s: [Manchester](/teachings/machester-werwillnachmanchaster##Manchaster)
 - < 1 GBit/s: [4B5B](/teachings/machester-werwillnachmanchaster##4B5B)
 - \> 1 GBit/s: 8B10B (nicht wichtig)
 
 Es besteht also aus den Folgenden Teilen:
 
 - **Prämbel (8Byte)**:
-  Die ist Hauptsächlich zum synchonisieren der clocks da... deswegen das 10101010... Pattern.
+  Die ist Hauptsächlich zum Synchonisieren der Clocks da... deswegen das 10101010... Pattern.
 
   Sie wird von dem Start-Frame-Delimiter[SFD] (10101011) beendet. 
 
