--- a/src/teachings/machester-werwillnachmanchaster.mdx
+++ b/src/teachings/machester-werwillnachmanchaster.mdx
@@ -1,5 +1,5 @@
 ---
-title: Manchaster - Wer will nach Manchaster (Coderungsarten)
+title: Manchester - Wer will nach Manchester (Coderungsarten)
 description: Das Nachschlagwerk der coderungsarten
 tags: [layer1]
 order: 2
