removed commitlint and added a7.3

--- a/src/teachings/syscom/Vermittlung-vermittlungdeiner5.0.mdx
+++ b/src/teachings/syscom/Vermittlung-vermittlungdeiner5.0.mdx
@@ -226,3 +226,17 @@ x> Führe mit einer gegebenen Tabelle Dijkstra aus
 <Spoiler>
 Muss man halt üben xd
 </Spoiler>
+
+x> Aufgabe 7.3 a) Kosten für i) Untersee kabel benachteiligen, ii) Hohe Kapazität bevorzugen iii) load balancen ![A7.3](/teaching-assets/syscom/A7.3.png)
+
+<Spoiler>
+  i)
+  Ist einfach. Es werden immer die niedrigsten Kosten bevorzugt, also wählt man die Untersee als die mit den höchsten Kosten. beispielsweise
+
+  ii)
+  Eigentlich analog. Man setzt die Kosten von den die man haben möchte runter und die anderen hoch. 
+
+  iii)
+  Wenn keines von beiden bevorzugt werden sollen müssen die Kosten gleich sein, also $LAX-SFO-JFK-LHR-AMS-FRA = LAX-MIA-LHR-AMS-FRA$.
+
+</Spoiler>
