--- a/src/teachings/syscom/checksum-summachtdiebiene.mdx
+++ b/src/teachings/syscom/checksum-summachtdiebiene.mdx
@@ -121,4 +121,11 @@ Das führt dazu, dass die zu sendene Bitfolge ein Vielfaches des Generatorpolyno
 
 Der Empfänger teilt dann die Bitfolge wieder durch das Generatorpolynom. Wenn dabei 0 rauskommt, wird kein Fehler erkannt (Heißt nicht dass keiner aufgetreten ist, aber es ist unwahrscheinlicher)
 
-Für eine Beispielrechnung schaut ins Moodle :)
+## Forward Error Correction
+
+Forward Error Correction sendet einfach so viele Daten mit, sodass man dann mit Bitweisem xor (oder) die Daten wiederherstellen kann.
+Hierfür sendet man 4 Pakete und kann dann einen davon wieder-hersetllen bei fehlern (Reihenfolge wegen XOR egal). 
+
+## Aufgaben 
+
+Für eine Beispielrechnung schaut ins Moodle :), oder fügt selber welche hier hinzu
