--- a/src/teachings/syscom/iso-osi-uwu.mdx
+++ b/src/teachings/syscom/iso-osi-uwu.mdx
@@ -49,7 +49,7 @@ Da es halt doch bissle alt ist, trifft es nicht immer ganz zu, aber im Groben is
 
 Naja sagt halt alles aus. Kann sowas sein wie WIFI bzw. IEEE 802.11, Ethernet, Bluetooth, etc.
 
-- **Schicht 2: Sicherheitsschicht**
+- **Schicht 2: Sicherungsschicht**
 
 Das hier ist nichtmehr so ganz richtig. Diese schicht wir zuhäuft auch von den Schicht 1 Protokollen übernommen. Hier findet die Datensicherheit(-unversehrtheit) statt.
 Z.B. [CRC-Checksummen, Paritätsbits, Hamming-Code etc.](/syscom/teachings/checksum-summachtdiebiene)
