--- a/src/teachings/syscom/tcpain.mdx
+++ b/src/teachings/syscom/tcpain.mdx
@@ -1,5 +1,5 @@
 ---
-title: tcpain (tpc, udp, maybe bissle quic)
+title: tcpain (tcp, udp, maybe bissle quic)
 date: 02/02/2023
 author: Jonas Schneider
 description: Überblick über TCP und UDP inklusive Header und Verbindungsaufbau und so
