fix: rechtlich legal werden v2

--- a/src/teachings/syscom/machester-werwillnachmanchaster.mdx
+++ b/src/teachings/syscom/machester-werwillnachmanchaster.mdx
@@ -1,6 +1,6 @@
 ---
-title: Manchester - Wer will nach Manchester (Coderungsarten)
-description: Das Nachschlagwerk der coderungsarten
+title: Manchester - Wer will nach Manchester (Codierungsarten)
+description: Das Nachschlagwerk der codierungsarten
 tags: [layer1]
 order: 2
 author: Jonas Schneider
