fix: bilder gefixt

--- a/src/teachings/es/scrumpe.mdx
+++ b/src/teachings/es/scrumpe.mdx
@@ -38,17 +38,17 @@ Dazu gehören Wasserfall, V und RUP.
 Dann gibt es agile Modelle, wo alles gleichzeitig passiert, mit vielen kleinen Iterationen und Intervallen; Scrum, XP
 
 ### Wasserfall
-![Wasserfallmodell](Wasserfallmodell.png)
+![Wasserfallmodell](/teaching-assets/es/Wasserfallmodell.png)
 Da werden in jedem Schritt die Ergebnisse bei Änderungen und Fehlern wieder zurück(hoch)gegeben, bis alle zufrieden sind.
 In der Wartung usw werden dann auch mögliche Änderungen wieder den Berg hoch und den ganzen Wasserfall wieder runtergeschickt.
 Dieses Modell ist ziemlich klassisch
 
 ### V-Modell
-![V-Modell](V-Modell.jpg)
+![V-Modell](/teaching-assets/es/V-Modell.jpg)
 Da wird in jedem Schritt getestet, und am Ende auch nochmal alles. Heißt V-Modell, weil obviously
 
 ### Evolutionäre Entwicklung
-![Evolutionäre Entwicklung](Evolutionäre-Entwicklung.png)
+![Evolutionäre Entwicklung](/teaching-assets/es/Evolutionäre-Entwicklung.png)
 Ist ziemlich intuitiv, man machts halt einfach, und fängt vorne wieder an wenn sich was ändern soll.
 
 ### RUP (rational unified process, RIP)
