--- a/src/teachings/es/scrumpe.mdx
+++ b/src/teachings/es/scrumpe.mdx
@@ -48,7 +48,7 @@ Dieses Modell ist ziemlich klassisch
 Da wird in jedem Schritt getestet, und am Ende auch nochmal alles. Heißt V-Modell, weil obviously
 
 ### Evolutionäre Entwicklung
-![Evolutionäre Entwicklung](/teaching-assets/es/Evolutionäre-Entwicklung.png)
+![Evolutionäre Entwicklung](/teaching-assets/es/Evolutionäre-Entwicklung.jpg)
 Ist ziemlich intuitiv, man machts halt einfach, und fängt vorne wieder an wenn sich was ändern soll.
 
 ### RUP (rational unified process, RIP)
