--- a/src/teachings/es/use-case-kopfschuss.mdx
+++ b/src/teachings/es/use-case-kopfschuss.mdx
@@ -34,4 +34,15 @@ Wichtig sind hier vorallem:
 
 ### Wir beginnen mit dem Use-Case Diagramm (es ist auch das erste was man vermutlich machen würde)
 
+![Use-Case-Diagramm](/teaching-assets/es/use-case-diagramm.png)
+
+Das erste Oben ist das eigentlich Use-Case Diagramm. Ein **Use-Case** ist eine Folge von Dingen, die ein System ausführen kann, wenn es mit wem interagiert.
+Wenn ich jetzt gerade diese Zusammenfassung schreibe, **nehme** ich an dem use-case **Teil**.
+
+Aber da ich ja auch noch SWT schreibe, enthalte ich auch die Rolle "du", also ein random normie Student und muss auch Klausuren machen Stichwort: **Vererbung**.
+
+![WTF](https://media.tenor.com/y4QbP8-Oo6gAAAAd/laughing-green.gif)
+
+<RumpeQuiz/>
+
 [^1]: [Wikipedia Use-Case-Diagramm](https://de.wikipedia.org/wiki/Use-Case-Diagramm)
