--- a/src/teachings/es/use-case-kopfschuss.mdx
+++ b/src/teachings/es/use-case-kopfschuss.mdx
@@ -21,6 +21,12 @@ Hierzu folgende Definition:
 
 - **Systemmodellierung**: Systemmodellierung ist die Darstellung der Systemarchitektur und der Systemkomponenten. Hierzu gehören auch die Use-Case-Diagramme. (Ist alles bullshit für das Aufgschreiben was geliefert werden soll)
 
+### Toleranz und Willkür
+
+Die Frage der Genauigkeit, kommt bei uns relativ schnell, da wenn du in Fosap das $\in L$ weglässt, deine Klausur ungefähr so lange durchhälst wie du im Bett, 
+aber meine Meinung dazu ist... Rumpe hat selber kein Plan, wenn du etwas sieht wie \<\< abstract \>\> und \{abstract\}, 
+dann ist das ein Hinweis, dass es wirklich egal ist solange du die grobe Struktur hast.
+
 ## UML
 
 Hier ein Inception Diagramm über UML Diagramme:
